<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <CheckBox
        android:id="@+id/checkBoxAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBirthdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/login_auto" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_below="@+id/txtUsername"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/txtBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/hint_birthdate"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtBirthdate"
        android:layout_below="@+id/checkBoxAutoLogin"
        android:layout_marginTop="39dp"
        android:onClick="connect"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnConnect"
        android:layout_alignBottom="@+id/btnConnect"
        android:layout_alignRight="@+id/txtBirthdate"
        android:layout_toRightOf="@+id/btnConnect"
        android:text="@string/btn_cancel" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_username" >

        <requestFocus />
    </EditText>

</RelativeLayout>